@@ -129,6 +129,7 @@ tests += tst-clone tst-clone2 tst-clone3 tst-fanotify tst-personality \
   tst-epoll \
   tst-getauxval \
   tst-pidfd \
+  tst-process_mrelease \
   # tests
 
 # process_madvise requires CAP_SYS_ADMIN.
