@@ -304,6 +304,7 @@ libc {
     pidfd_getfd;
     pidfd_send_signal;
     process_madvise;
+    process_mrelease;
   }
   GLIBC_PRIVATE {
     # functions used in other libraries
