@@ -2705,3 +2705,4 @@ GLIBC_2.36 pidfd_getfd F
 GLIBC_2.36 pidfd_open F
 GLIBC_2.36 pidfd_send_signal F
 GLIBC_2.36 process_madvise F
+GLIBC_2.36 process_mrelease F
